// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeadingRenderer snapshot (T-0006-064) — productive×focus matches snapshot at productive×focus 1`] = `
<Text
  accessibilityLabel="Welcome"
  accessibilityRole="header"
  aria-level={2}
  style={
    {
      "color": "#14171A",
      "fontSize": 24,
      "fontWeight": "600",
      "letterSpacing": -0.2,
      "lineHeight": 30,
      "textAlign": "left",
    }
  }
>
  Welcome
</Text>
`;

exports[`HeadingRenderer snapshot (T-0006-065) — expressive×health matches snapshot at expressive×health 1`] = `
<Text
  accessibilityLabel="Welcome"
  accessibilityRole="header"
  aria-level={2}
  style={
    {
      "color": "#1A1715",
      "fontSize": 28,
      "fontWeight": "500",
      "letterSpacing": -0.3,
      "lineHeight": 36,
      "textAlign": "left",
    }
  }
>
  Welcome
</Text>
`;
